openshift/apps/symphony/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: symphony
  namespace: symphony
  labels:
    app: symphony
spec:
  selector:
    matchLabels:
      app: symphony
  replicas: 1
  template:
    metadata:
      labels:
        app: symphony
    spec:
      containers:
        - name: symphony
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: '500m'
              memory: 500Mi
          image: quay.io/kenmoini/symphony:eef7fb3721c81a1bb2ec400ee3874cbe3d51670c
          ports:
            - containerPort: 9191
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  #paused: false
